fix <480px mobile menu, add hero gradient, fix features section mobile and tablet

--- a/css/main.css
+++ b/css/main.css
@@ -611,6 +611,7 @@ img {
   width: 100%;
   height: 100%;
   padding: 93px 15px;
+  overflow-y: scroll;
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
   transition: opacity 500ms cubic-bezier(0.4, 0, 0.2, 1), visibility 500ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -794,36 +795,39 @@ img {
 
 .section-hero {
   height: 400px;
+  margin-left: auto;
+  margin-right: auto;
   padding-top: 118px;
   padding-bottom: 118px;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(../images/hero/hero-sm.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-sm.jpg);
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .section-hero {
-    background-image: url(../images/hero/hero-sm@2x.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-sm@2x.jpg);
   }
 }
 @media screen and (min-width: 768px) {
   .section-hero {
-    background-image: url(../images/hero/hero-md.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-md.jpg);
   }
 }
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .section-hero {
-    background-image: url(../images/hero/hero-md@2x.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-md@2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
   .section-hero {
-    background-image: url(../images/hero/hero-lg.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    max-width: 1600px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-lg.jpg);
   }
 }
 @media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
   .section-hero {
-    background-image: url(../images/hero/hero-lg@2x.jpg), linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/hero-lg@2x.jpg);
   }
 }
 @media screen and (min-width: 1200px) {
@@ -883,31 +887,23 @@ img {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: -15px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .features-section__list {
     gap: 30px;
-    margin: 0;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .features-section__item {
-    margin: 15px;
-    width: calc((100% - 60px) / 2);
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media screen and (max-width: 767.98px) {
   .features-section__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .features-section__item {
+    width: 354px;
   }
 }
 @media screen and (min-width: 1200px) {
   .features-section__item {
     width: 270px;
-    margin: 0;
   }
 }
 
@@ -1085,6 +1081,7 @@ img {
   width: 100vw;
   height: 100vh;
   z-index: 10;
+  overflow: hidden;
   padding: 48px 40px;
   transform: translateX(100%);
   transition: transform 500ms ease-in-out;
@@ -1102,6 +1099,11 @@ img {
 .mobile-menu__list {
   margin-bottom: 302px;
 }
+@media screen and (max-width: 479px) {
+  .mobile-menu__list {
+    margin-bottom: 202px;
+  }
+}
 
 .mobile-menu__item {
   margin-bottom: 32px;
@@ -1115,7 +1117,16 @@ img {
   letter-spacing: 0.8px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+@media screen and (max-width: 479px) {
+  .mobile-menu__link {
+    font-size: 30px;
+  }
+}
 .mobile-menu__link:hover, .mobile-menu__link:focus {
+  color: var(--color-brand);
+}
+
+.mobile-menu__link--current {
   color: var(--color-brand);
 }
 
@@ -1127,6 +1138,11 @@ img {
   color: var(--color-primary);
   line-height: 1.1764705882;
   font-size: 34px;
+}
+@media screen and (max-width: 479px) {
+  .mobile-menu_contacts-tel {
+    font-size: 25px;
+  }
 }
 .mobile-menu_contacts-tel:hover, .mobile-menu_contacts-tel:focus {
   color: var(--color-brand);
@@ -1150,6 +1166,11 @@ img {
 .mobile-menu__social {
   display: flex;
   align-items: center;
+}
+@media screen and (max-width: 479px) {
+  .mobile-menu__social {
+    flex-wrap: wrap;
+  }
 }
 
 .mobile-menu_social-item {
