--- a/sass/components/_main-features.scss
+++ b/sass/components/_main-features.scss
@@ -1,7 +1,3 @@
-// .features-section {
-//   padding-bottom: 0;
-// }
-
 .features-list-box {
   margin-bottom: 30px;
   height: 120px;
@@ -25,30 +21,23 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: -15px;
-  }
-
-  @include mq(desktop) {
     gap: 30px;
-    margin: 0;
   }
 }
 
 .features-section__item {
-  @include mq(tablet) {
-    margin: 15px;
-    width: calc((100% - 2 * 30px) / 2);
-  }
-
-  @include mq(tablet-only) {
+  @include mq(mobile-only) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
   }
 
+  @include mq(tablet) {
+    width: 354px;
+  }
+
   @include mq(desktop) {
     width: 270px;
-    margin: 0;
   }
 }
 
