--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   height: 100vh;
   z-index: 10;
+   overflow: hidden;
 
   padding: 48px 40px;
 
@@ -23,6 +24,10 @@
 }
 
 .mobile-menu__list {
+  @media screen and (max-width: 479px) {
+    margin-bottom: 202px;
+  }
+
   margin-bottom: 302px;
 }
 
@@ -37,11 +42,20 @@
   line-height: calc(47 / 40);
   letter-spacing: 0.8px;
 
+  @media screen and (max-width: 479px) {
+   font-size: 30px;
+  }
+
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
     color: var(--color-brand);
   }
+}
+
+.mobile-menu__link--current {
+  color: var(--color-brand);
 }
 
 .mobile-menu__contacts {
@@ -52,6 +66,10 @@
   color: var(--color-primary);
   line-height: calc(40 / 34);
   font-size: 34px;
+
+  @media screen and (max-width: 479px) {
+   font-size: 25px;
+  }
 
   &:hover,
   &:focus {
@@ -77,6 +95,10 @@
 .mobile-menu__social {
   display: flex;
   align-items: center;
+
+  @media screen and (max-width: 479px) {
+   flex-wrap: wrap;
+  }
 }
 
 .mobile-menu_social-item {
