--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,6 +5,7 @@
   width: 100%;
   height: 100%;
   padding: 93px 15px;
+  overflow-y: scroll;
 
   opacity: 1;
   background-color: rgba(0, 0, 0, 0.2);
@@ -20,6 +21,7 @@
 
 .modal {
   margin: 0 auto;
+  // position: absolute;
 
   @media screen and (min-width: 480px) {
     position: absolute;
